--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "iqbalatma/laravel-service-repo": "^3.3.12",
         "iqbalatma/laravel-utils": "^1.4",
         "laravel/framework": "^10.10",
+        "laravel/horizon": "^5.23",
+        "laravel/pulse": "^1.0@beta",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.11"
     },
@@ -70,6 +73,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "beta",
     "prefer-stable": true
 }
